; ModuleID = '/home/carl/AnghaBench/vlc/src/preparser/extr_fetcher.c_NotifyArtFetchEnded.c'
source_filename = "/home/carl/AnghaBench/vlc/src/preparser/extr_fetcher.c_NotifyArtFetchEnded.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.fetcher_request = type { i32, i32, %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32 (i32, i32, i32)* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.fetcher_request*, i32)* @NotifyArtFetchEnded to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @NotifyArtFetchEnded(%struct.fetcher_request* %0, i32 %1) #0 {
  %3 = alloca %struct.fetcher_request*, align 8
  %4 = alloca i32, align 4
  store %struct.fetcher_request* %0, %struct.fetcher_request** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load %struct.fetcher_request*, %struct.fetcher_request** %3, align 8
  %6 = getelementptr inbounds %struct.fetcher_request, %struct.fetcher_request* %5, i32 0, i32 2
  %7 = load %struct.TYPE_2__*, %struct.TYPE_2__** %6, align 8
  %8 = icmp ne %struct.TYPE_2__* %7, null
  br i1 %8, label %9, label %30

9:                                                ; preds = %2
  %10 = load %struct.fetcher_request*, %struct.fetcher_request** %3, align 8
  %11 = getelementptr inbounds %struct.fetcher_request, %struct.fetcher_request* %10, i32 0, i32 2
  %12 = load %struct.TYPE_2__*, %struct.TYPE_2__** %11, align 8
  %13 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %12, i32 0, i32 0
  %14 = load i32 (i32, i32, i32)*, i32 (i32, i32, i32)** %13, align 8
  %15 = icmp ne i32 (i32, i32, i32)* %14, null
  br i1 %15, label %16, label %30

16:                                               ; preds = %9
  %17 = load %struct.fetcher_request*, %struct.fetcher_request** %3, align 8
  %18 = getelementptr inbounds %struct.fetcher_request, %struct.fetcher_request* %17, i32 0, i32 2
  %19 = load %struct.TYPE_2__*, %struct.TYPE_2__** %18, align 8
  %20 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %19, i32 0, i32 0
  %21 = load i32 (i32, i32, i32)*, i32 (i32, i32, i32)** %20, align 8
  %22 = load %struct.fetcher_request*, %struct.fetcher_request** %3, align 8
  %23 = getelementptr inbounds %struct.fetcher_request, %struct.fetcher_request* %22, i32 0, i32 1
  %24 = load i32, i32* %23, align 4
  %25 = load i32, i32* %4, align 4
  %26 = load %struct.fetcher_request*, %struct.fetcher_request** %3, align 8
  %27 = getelementptr inbounds %struct.fetcher_request, %struct.fetcher_request* %26, i32 0, i32 0
  %28 = load i32, i32* %27, align 8
  %29 = call i32 %21(i32 %24, i32 %25, i32 %28)
  br label %30

30:                                               ; preds = %16, %9, %2
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
